--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_sixvalley_ecommerce
 description: A new Flutter setup application for starting a project.
 
 publish_to: 'none'
-version: 1.0.0+3
+version: 1.0.0+5
 environment:
   sdk: '>=3.2.1 <4.0.0'
 
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.6
+  media_store_plus: ^0.1.3
   get_it: ^7.6.6
   provider: ^6.0.3
   connectivity_plus: ^5.0.2
